Closed Bug 392359 Opened 17 years ago Closed 17 years ago

Some values of pointer-events not working

Categories

(Core :: SVG, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: tor, Unassigned)

Details

Attachments

(1 file, 1 obsolete file)

Attached patch force hit testing when needed (obsolete) — Splinter Review
The addition of containing rects to avoid unnecessary work broke some values of pointer-events in some circumstances, because the rect will not get initialized.

See test cases on bug 347374 and this portion of the spec:

  http://www.w3.org/TR/SVG11/interact.html#PointerEventsProperty
Attachment #276811 - Flags: review?(longsonr)
Comment on attachment 276811 [details] [diff] [review]
force hit testing when needed

> #define HITTEST_MASK_FILL 1
> #define HITTEST_MASK_STROKE 2
>+#define HITTEST_FORCE_TEST 3

Shouldn't that be
#define HITTEST_FORCE_TEST 4

Although I'd rather see

#define HITTEST_MASK_FILL    0x01
#define HITTEST_MASK_STROKE  0x02
#define HITTEST_FORCE_TEST   0x04

Then it would be a little clearer these are supposed to form a set of bits

At the moment HITTEST_MASK_FILL | HITTEST_MASK_STROKE  == HITTEST_FORCE_TEST

+      mask |=
+        HITTEST_MASK_FILL |
+        HITTEST_MASK_STROKE |
+        HITTEST_FORCE_TEST;

So this is mask |= HITTEST_FORCE_TEST for instance although I don't think you meant that.
Attachment #276811 - Flags: review?(longsonr) → review-
In case I wasn't clear I think the only thing wrong is the #define value
(In reply to comment #1)
> (From update of attachment 276811 [details] [diff] [review])
> > #define HITTEST_MASK_FILL 1
> > #define HITTEST_MASK_STROKE 2
> >+#define HITTEST_FORCE_TEST 3
> 
> Shouldn't that be
> #define HITTEST_FORCE_TEST 4

Gah, how did I end up with that?  I remember thinking when typing that line that it was a mask and I need a power of two.  Gremlins, probably...
Attached patch darn gremlins...Splinter Review
Attachment #276811 - Attachment is obsolete: true
Attachment #277009 - Flags: review?(longsonr)
Attachment #277009 - Flags: review?(longsonr) → review+
Attachment #277009 - Flags: superreview?(roc)
Attachment #277009 - Flags: superreview?(roc) → superreview+
Comment on attachment 277009 [details] [diff] [review]
darn gremlins...

Low risk specification conformance fix.
Attachment #277009 - Flags: approval1.9?
Checked in.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: