Bug 392359 - some values of pointer-events not working. r=longsonr, sr=roc, a=vlad